crates/kwokka-macros/tests/ui/unscheduled.rs
#[kwokka::main]
async fn main() {}
